Completed the function of publishing an article

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -10,11 +10,21 @@ ul li{
 }
 
 .main {
-    margin: 30px 100px 50px;
     background-color: white;
 }
 
 .btn-publish {
     float: right;
     margin-bottom: 15px;
+}
+@media (min-width:1200px) {
+    .main {
+        margin: 30px 100px 50px;
+    }
+}
+
+@media (max-width:992px) {
+    .main {
+        margin: 30px 30px 50px;
+    }
 }
