--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充 (必填，请参照右侧提示):</label>
-                    <textarea class="form-control" th:value="${description}" rows="10" cols="30" id="description" name="description"></textarea>
+                    <textarea class="form-control" th:text="${description}" rows="10" cols="30" id="description" name="description"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签:</label>
