--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,6 +26,9 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="https://github.com/ryanhanwu/How-To-Ask-Questions-The-Smart-Way">提问的艺术</a>
+                </li>
                 <li th:if="${session.user != null}">
                     <a href="/publish">发布</a>
                 </li>
@@ -52,7 +55,7 @@
             <h2><span class="glyphicon glyphicon-th-list" aria-hidden="true">发现</span></h2>
             <hr>
 
-            <div class="media" th:each="question:${questions}">
+            <div class="media" th:each="question:${pagination.questions}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-circle"
@@ -65,10 +68,42 @@
                     <span class="text-desc">
                         <span th:text="${question.commentCount}"></span>个回复 •
                         <span th:text="${question.viewCount}"></span> 次浏览 • 发表于
-                        <span th:text="${#dates.format(question.gmtCreate,'yyyy.MM.dd')}"></span>
+                        <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>
                     </span>
                 </div>
             </div>
+
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+
+                    <li th:if="${pagination.showFistPage}">
+                        <a href="/?page=1" aria-label="Previous">
+                            <span aria-hidden="true">&lt;&lt;</span>
+                        </a>
+                    </li>
+
+                    <li th:if="${pagination.showPrevious}">
+                        <a th:href="@{/(page=${pagination.page - 1})}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+
+                    <li th:each="page:${pagination.pages}" th:class="${pagination.page==page}? 'active' : ''">
+                        <a href="#" th:href="@{/(page=${page})}" th:text="${page}"></a>
+                    </li>
+
+                    <li th:if="${pagination.showNext}">
+                        <a th:href="@{/(page=${pagination.page + 1})}" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pagination.showEndPage}">
+                        <a th:href="@{/(page=${pagination.totalPage})}" aria-label="Next">
+                            <span aria-hidden="true">&gt;&gt;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
 
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" style="margin-top: 20px;">
