--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -31,21 +31,24 @@
                 <div class="form-group">
                     <label for="tag">添加标签:</label>
                     <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" autocomplete="off" placeholder="输入标签，以 , 分隔" onclick="showSelectTag()">
+                    <!--标签展示-->
                     <div id="select-tag">
                         <ul class="nav nav-tabs" role="tablist">
-                            <li role="presentation" th:each="selectCategory : ${tags}">
+                            <li role="presentation" th:each="selectCategory,selectCategoryStat : ${tags}" th:class="${selectCategoryStat.first ? 'active': ''}">
                                 <a th:href="${'#'+selectCategory.categoryName}" aria-controls="home" role="tab" data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
                             </li>
                         </ul>
 
                         <div class="tab-content">
-                            <div role="tabpanel" class="tab-pane active publish-tags-style" th:id="${selectCategory.categoryName}" th:each="selectCategory: ${tags}">
+                            <div role="tabpanel"
+                                 th:id="${selectCategory.categoryName}"
+                                 th:each="selectCategory: ${tags}"
+                                 th:class="${selectCategoryStat.first ? 'active tab-pane  publish-tags-style': 'tab-pane  publish-tags-style'}">
                                 <span class="label label-info publish-tag-style" th:each="selectTag : ${selectCategory.tags}">
                                     <span onclick="selectTag(this)" th:data-tag="${selectTag}" th:text="${selectTag}"></span>
                                 </span>
                             </div>
                         </div>
-
                     </div>
                 </div>
 
