--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -53,8 +53,8 @@
             <!--显示回复内容-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4><span th:text="${question.commentCount}"></span> 个回复</h4>
-                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment_sp">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments" th:each="comment : ${comments}">
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 question-comment-sp">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 question-comments" th:each="comment : ${comments}">
                     <div class="media">
                         <div class="media-left">
                             <a href="#">
@@ -65,7 +65,7 @@
                             <h5 class="media-heading" th:text="${comment.user.name}">
                             </h5>
                             <div th:text="${comment.content}"></div>
-                            <div class="menu">
+                            <div class="question-menu">
                                 <span class="glyphicon glyphicon-thumbs-up icon"></span>
                                 <span class="icon" th:data-id="${comment.id}"
                                       onclick="collapseComments(this)">
@@ -78,7 +78,7 @@
 
                             </div>
                             <!--二级评论-->
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comments"
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse question-sub-comments"
                                  th:id="${'comment-'+comment.id}">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <input type="text" class="form-control" placeholder="评论一下..."
@@ -98,7 +98,7 @@
             <!--输入回复内容-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>提交回复</h4>
-                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment_sp">
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 question-comment-sp">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
                     <div class="media">
                         <div class="media-left">
@@ -112,8 +112,8 @@
                         </div>
                     </div>
                     <input type="hidden" id="question_id" th:value="${question.id}">
-                    <textarea class="form-control comment" rows="5" id="comment_content"></textarea>
-                    <button type="button" class="btn btn-success btn-comment" onclick="post()">回复</button>
+                    <textarea class="form-control question-comment" rows="5" id="comment_content"></textarea>
+                    <button type="button" class="btn btn-success question-btn-comment" onclick="post()">回复</button>
                 </div>
             </div>
         </div>
