--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -19,6 +19,7 @@
 <div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid main">
     <div class="row">
+        <!--左边部分-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
 
             <!--正文-->
@@ -37,7 +38,7 @@
                 </div>
                 <script type="text/javascript">
                     $(function () {
-                        editormd.markdownToHTML("question-view", {styleActiveLine:false});
+                        editormd.markdownToHTML("question-view", {styleActiveLine: false});
                     });
                 </script>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -114,12 +115,12 @@
                     <div class="media">
                         <div class="media-left">
                             <a href="#">
-                                <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
+                                <img class="media-object img-rounded"
+                                     th:src="${session.user != null ? session.user.avatarUrl : '/images/default-avatar.png'}">
                             </a>
                         </div>
                         <div class="media-body">
-                            <h5 class="media-heading" th:text="${question.user.name}">
-                            </h5>
+                            <h5 class="media-heading" th:text="${session.user != null ? session.user.name : '匿名用户'}"></h5>
                         </div>
                     </div>
                     <input type="hidden" id="question_id" th:value="${question.id}">
@@ -129,6 +130,7 @@
             </div>
         </div>
 
+        <!--右边部分-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" style="margin-top: 20px;">
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -145,12 +147,14 @@
                     </div>
                 </div>
             </div>
+
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>关注</h4>
                 <img src="/images/zhi.png" class="img-thumbnail" width="90%">
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>相关问题</h4>
                 <ul class="question-related">
