--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,5 +16,6 @@
     <p th:text="${message}">服务器承受不住啦~请稍后再来！</p>
     <p><a class="btn btn-primary btn-lg" href="/" role="button">点击返回首页</a></p>
 </div>
+<div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
