Finished the function of hot tags

--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -28,7 +28,7 @@
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="https://github.com/ryanhanwu/How-To-Ask-Questions-The-Smart-Way">提问的艺术</a>
+                        <a href="https://github.com/ryanhanwu/How-To-Ask-Questions-The-Smart-Way" target="_blank">提问的艺术</a>
                     </li>
                     <li th:if="${session.user != null}">
                         <a href="/publish">发布</a>
