--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -5,7 +5,7 @@
 <body>
 
 <div th:fragment="foot" class="footer">
-    <div>Copyright © 2019 · 小智社区 · 服务器赞助: <a href="https://cloud.tencent.com/">腾讯云</a> · 网站程序: Spring Boot · ICP备***号</div>
+    <div>Copyright © 2019 · 小智社区 · 服务器赞助: <a href="https://cloud.tencent.com/" target="_blank">腾讯云</a> · 网站程序: Spring Boot · ICP备***号</div>
 </div>
 </body>
 </html>
