--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <script type="application/javascript">
     window.onload = function () {
         var closable = window.localStorage.getItem("closable");
-        if (closable == "true"){
+        if (closable == "true") {
             window.close();
             window.localStorage.removeItem("closable");
         }
@@ -34,10 +34,9 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" >
+                    <h4 class="media-heading">
                         <a th:href="@{'/question/'+ ${question.id}}" th:text="${question.title}"></a>
                     </h4>
-                    <span th:text="${question.description}"></span> <br>
                     <span class="text-desc">
                         <span th:text="${question.commentCount}"></span>个回复 •
                         <span th:text="${question.viewCount}"></span> 次浏览 • 发表于
@@ -49,28 +48,28 @@
                 <ul class="pagination">
 
                     <li th:if="${pagination.showFistPage}">
-                        <a th:href="@{/(page=1,search=${search})}"  aria-label="Previous">
+                        <a th:href="@{/(page=1,search=${search},tag=${tag})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
 
                     <li th:if="${pagination.showPrevious}">
-                        <a th:href="@{/(page=${pagination.page - 1},search=${search})}" aria-label="Previous">
+                        <a th:href="@{/(page=${pagination.page - 1},search=${search},tag=${tag})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
 
                     <li th:each="page:${pagination.pages}" th:class="${pagination.page==page}? 'active' : ''">
-                        <a th:href="@{/(page=${page},search=${search})}" th:text="${page}"></a>
+                        <a th:href="@{/(page=${page},search=${search},tag=${tag})}" th:text="${page}"></a>
                     </li>
 
                     <li th:if="${pagination.showNext}">
-                        <a th:href="@{/(page=${pagination.page + 1},search=${search})}" aria-label="Next">
+                        <a th:href="@{/(page=${pagination.page + 1},search=${search},tag=${tag})}" aria-label="Next">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.showEndPage}">
-                        <a th:href="@{/(page=${pagination.totalPage},search=${search})}" aria-label="Next">
+                        <a th:href="@{/(page=${pagination.totalPage},search=${search},tag=${tag})}" aria-label="Next">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
                     </li>
@@ -79,7 +78,14 @@
 
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" style="margin-top: 20px;">
-            <h3>热点话题</h3>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>热门标签</h4>
+                <ul class="question-related">
+                    <li th:each="tag : ${tags}">
+                        <a th:href="@{/(page=1,search=${search},tag=${tag})}" th:text="${tag}"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
